--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@ coverage
 # node-waf configuration
 .lock-wscript
 
+# next files
+.next/
+
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
