--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "angelmsanchez85@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "next": "^9.0.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
