--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "POC with next framework",
   "main": "index.js",
   "scripts": {
-    "dev": "next",
     "build": "next build",
-    "start": "next"
+    "dev": "next",
+    "start": "next start -p %PORT%"
   },
   "keywords": [],
   "author": "angelmsanchez85@gmail.com",
